fixed numbers not showing

--- a/static/css/reactions.css
+++ b/static/css/reactions.css
@@ -1,6 +1,7 @@
 .selected {
-    background-color: #f1f1f1;
-    border: 2px solid #4CAF50;
+    background-color: var(--primary-color);
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.15);
+    color: white;
 }
 
 .reactions-array {
